--- a/themes/ESGI-theme/src/css/partials/_globals.scss
+++ b/themes/ESGI-theme/src/css/partials/_globals.scss
@@ -5,6 +5,7 @@
 html {
 	font-size: 16px;
 	scroll-behavior: smooth;
+	overflow-x: hidden; // no horizontal scroll
 }
 
 body {
@@ -18,6 +19,7 @@ body {
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
+	overflow-x: hidden; // no horizontal scroll
 }
 
 // 404 page specific layout
